# NoteTrail

./: .gitignore  BlockRender.py  BookProcessor.py  CharacterScanner.py  LICENSE  NotionClient.py  NotionRender.py  OSSHandler.py  README.md  block.py  block_render.py  book_processor.py  character_scanner.py  hexo.py  main.py  my_notion_client.py  notion_render.py  oss_handler.py  pyproject.toml  render.py  utils.py
.github/workflows/: black.yml
notebook/: notion_object.ipynb
notetrail/: block_render.py  book_processor.py  character_scanner.py  config.yaml  main.py  my_notion_client.py  notion_render.py
notetrail/hexo/: hexo.py
notetrail/utils/: config_manager.py  decorators.py  exceptions.py  oss_handler.py  render.py  sqllite_handler.py  utils.py
notetrail/utils/image_processors/: __init__.py  ali_oss.py  picgo.py
test/: conftest.py  database.py  test_hexo_db.py
test/test_hexo/: test_db.py
watson/: book_processor.py
watson/utils/: render.py  sqllite_handler.py  utils.py
